--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.0.0"
 description = "QUA language SDK to control a Quantum Computer"
 readme = "README.md"
 authors = ["Quantum Machines <info@quantum-machines.co>"]
-license = "Quantum Machines SDK License"
+license = "BSD-3-Clause"
 
 packages = [
     { include = "qm" },
@@ -18,25 +18,25 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8, <3.12"
+python = ">=3.8, <3.13"
 grpcio = [
     {version = "^1.39.0", python = ">=3.8,<3.11"},
     {version = "^1.57", python = ">=3.11"}
 ]
 protobuf = ">=3.17.3, <5"
-betterproto = [
-    {version = "2.0.0b5", python = ">=3.8,<3.11"},
-    {version = "2.0.0b6", python = "==3.11"}
-]
+betterproto = "2.0.0b7"
 marshmallow = "^3.20.1"
 marshmallow-polyfield = "^5.7"
-numpy = "^1.17.0"
+numpy = [
+    {version = ">=1.17.0, <2", python = ">=3.8,<3.12"},
+    {version = ">=1.26.0, <2", python = ">=3.12"}
+]
 tinydb = "^4.6.1"
 certifi = { version = "*", optional = true }
 datadog-api-client = "^2.6.0"
 deprecation = "^2.1.0"
 dependency_injector = "^4.41.0"
-qm-octave = "2.1.2"
+qm-octave = "2.1.3"
 typing-extensions = "^4.5"
 
 grpclib = { version = "^0.4.5", python = ">=3.10", allow-prereleases = true }
@@ -54,18 +54,13 @@ pytest-benchmark = { extras = ["aspect"], version = "^4.0.0" }
 
 black = "^22.6.0"
 flake8 = "^3.9.2"
-importlib-metadata = { version = "^4.0.0", python = "~3.7" }
 pytest = "^7.0.0"
 pytest-cov = "^4.0.0"
 flake8-bugbear = "^21.11.29"
 poethepoet = "^0.16.0"
 pytest-order = "^1.0.0"
 
-Sphinx = "^4.3.1"
-sphinx-rtd-theme = "^1.0.0"
-sphinxcontrib-redoc = "^1.6.0"
 apispec = "^5.1.1"
-sphinx-toolbox = "^2.15.2"
 poetry-dynamic-versioning = { extras = ["plugin"], version = "^0.21.2" }
 mypy = "^1.1.1"
 isort = "^5.11.5"
@@ -115,8 +110,6 @@ format-black = "poetry run black qm"
 format-isort = "poetry run isort qm"
 format.sequence = ["format-black", "format-isort"]
 format.ignore_fail = true
-
-check-links = "sphinx-build -b linkcheck docs_sphinx dist/check-links"
 
 lint-black = "black qm --check"
 lint-flake8 = "flake8 qm"
